# sparklogs-ingest-examples

./: .gitignore  LICENSE  Makefile  README.md
dotnet/: Makefile
dotnet/sparklogs-otel-mel/: Makefile  Program.cs  README.md  sparklogs-otel-mel.csproj
dotnet/sparklogs-otel-nlog/: Makefile  Program.cs  README.md  nlog.config  sparklogs-otel-nlog.csproj
dotnet/sparklogs-otel-serilog/: Makefile  Program.cs  README.md  sparklogs-otel-serilog.csproj
go/: Makefile
go/sparklogs-otel-logrus/: Makefile  README.md  go.mod  go.sum  main.go
go/sparklogs-otel-slog/: Makefile  README.md  go.mod  go.sum  main.go
go/sparklogs-otel-zap/: Makefile  README.md  go.mod  go.sum  main.go
go/sparklogs-otel-zerolog/: Makefile  README.md  go.mod  go.sum  main.go
java/: Makefile
java/sparklogs-otel-log4j2/: Makefile  README.md  pom.xml
java/sparklogs-otel-logback/: Makefile  README.md  pom.xml
localenv/elasticsearch/: docker-compose.yml  start.sh  stop.sh
localenv/otel-mock/: README.md  config.yaml  start.sh  stop.sh
mk/: sparklogs-otel.mk  visual-banner.mk
nodejs/: Makefile
nodejs/sparklogs-bunyan-example/: README.md  app.js  package-lock.json  package.json
nodejs/sparklogs-js-common/: endpoint.js  package.json  stress.js
nodejs/sparklogs-otel-bunyan-example/: Makefile  README.md  app.cjs  package.json
nodejs/sparklogs-otel-example/: Makefile  README.md  app.cjs  app.js  (+2 more)
php/: Makefile
python/: Makefile
ruby/: Makefile
rust/: Makefile
rust/sparklogs-otel-tracing/: Cargo.toml  Makefile  README.md
rust/sparklogs-otel-tracing/src/: main.rs
(+36 files in other folders)
