[package]
name = "sparklogs-otel-tracing"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = { version = "0.32", features = ["logs"] }
opentelemetry_sdk = { version = "0.32", features = ["logs"] }
opentelemetry-otlp = { version = "0.32", features = ["logs", "http-proto", "reqwest-blocking-client", "gzip-http"] }
opentelemetry-appender-tracing = "0.32"
# Same reqwest major as opentelemetry-otlp; explicit dep so we can set `local_address` (IPv4 bind).
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "default-tls"] }
